<resources>
    <string name="app_name">Centauri</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="learn">Learn</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="extra_mat">Extra Materials</string>
    <string name="part">Part</string>
    <string name="lesson">Lesson</string>
    <string name="test">TEST</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="all">🌌 All</string>
    <string name="today">📅 Today</string>
    <string name="saves">💾 Saves</string>
    <string name="planets">Planets</string>
    <string name="scientists">Scientists</string>
    <string name="about_centauri">About Centauri</string>
    <string name="closeTestTitle">The test will be cancelled!</string>
    <string name="closeTestWarning">Are you sure you want to close the test? Your progress will not be saved!</string>
    <string name="PressToExit">Press back again to exit</string>
    <string name="unauthenticated">Guest</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign out</string>
    <string name="language_settings">Language settings</string>
    <string name="profile_settings">Profile settings</string>
    <string name="lang_change_expl">Change the language of the app</string>
    <string name="you_are_not_authenticated">You are not authenticated</string>
    <string name="have_to_create_account">You have to create an account for this!</string>
    <string name="password">password</string>
    <string name="need_to_sign_up">Don\'t have an account yet? Sign Up</string>
    <string name="need_to_sign_in">Already have an account? Sign In</string>
    <string name="username">username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="coming_soon">Coming soon</string>
    <string name="coming_soon_text">This part of the application is still under development. We will inform you whenever there\'s an update.</string>
    <string name="start_test">Start a test? 🚀</string>
    <string name="take_test_description">Take a test based on what you’ve learned and check your understanding of the material.
    If you pass, the next section will be unlocked for you to study.</string>
    <string name="lesson_closed">This lesson is closed</string>
    <string name="fail_to_get_data">Sorry but it seems the app failed to get your data from Database Please try later</string>
    <string name="error">ERROR</string>
    <string name="failed_to_translate">Apologies, but the online translation service may be experiencing issues at the moment. Therefore, the news is only available in English. Please try again later to view it in other languages.</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
    <string name="sth_went_wrong">Something went wrong</string>
    <string name="loading_question">Loading question…</string>
    <string name="loading_add">Loading Add…</string>
    <string name="loading_data">Loading Data…</string>
    <string name="checking_ai">Checking is AI working…</string>
    <string name="ai_not_working">Sorry the AI assistance is not working Try later</string>
    <string name="add_not_working">Sorry! could not receive the add Try later</string>
    <string name="checking_asnwer">Checking user\'s answer…</string>
    <string name="about_centauri_text">What is Centauri?
    Centauri refers to the Alpha Centauri star system, which is the closest star system to
        our Sun. It\'s not just one star, but a system of three stars that are our nearest cosmic neighbors.
        Because of its proximity, Alpha Centauri is often the first place we think of when we talk about exploring
        other star systems beyond our own.\n\
    Why is this application named Centauri?\n\
    We named our application Centauri because it represents discovery, connection, and new horizons.
        Just like the Alpha Centauri system is a beacon for future exploration, our app aims to help you
        We want this app to be your reliable guide and closest companion as you opening up new possibilities right at your fingertips.\n\
    </string>
    <string name="part_1">Introduction to Astronomy</string>
    <string name="lesson1">The Nature of Astronomy and Science</string>
    <string name="lesson2">The Universe: Large and Small Scales</string>
    <string name="lesson3">Observing the Sky: History of Astronomy</string>
    <string name="lesson4">Tools of Astronomy: Telescopes &amp; Instruments</string>
    <string name="part_2">The Solar System &amp; Its Components</string>
    <string name="lesson5">Orbits &amp; Gravity: The Foundation</string>
    <string name="lesson6">The Earth-Moon System</string>
    <string name="lesson7">The Planets (inner, outer, exo)</string>
    <string name="part_3"> The Sun &amp; Stars</string>
    <string name="lesson8">The Sun as a Star</string>
    <string name="lesson9">Stellar Classification &amp; Spectroscopy</string>
    <string name="lesson10"> Life Cycles of Stars</string>
    <string name="lesson11">Supernovae, Neutron Stars &amp; Black Holes</string>
    <string name="part_4">  Galaxies &amp; Cosmology</string>
    <string name="lesson12">The Milky Way Galaxy</string>
    <string name="lesson13">Types of Galaxies &amp; Their Evolution</string>
    <string name="lesson14"> Dark Matter &amp; The Expanding Universe</string>
    <string name="lesson15">The Big Bang &amp; The Fate of the Universe</string>
    <string name="lesson1_title_1">What is Astronomy?</string>
    <string name="lesson1_text_1">Astronomy is the study of everything beyond Earth—planets, stars,
        galaxies, and the vast universe itself. It is one of the oldest sciences,
        dating back thousands of years when ancient civilizations first gazed at the night sky,
        tracking the movements of celestial objects. Early astronomers used the Sun, Moon, and stars to measure time,
        predict seasons, and navigate across oceans. The Babylonians created some of the earliest star maps over 5,000 years ago,
        the Egyptians aligned their pyramids with certain stars, and the Greeks developed early models of the solar system.
        The Mayans were able to predict solar and lunar eclipses,
        while scholars during the Islamic Golden Age made major contributions to astronomical calculations.
        Over time, as technology advanced, our understanding of the universe expanded.
        Today, powerful telescopes allow us to see distant galaxies billions of light-years away,
        while space probes explore planets and moons in our solar system.
        But even with all this progress, astronomy remains a science of endless discovery,
        helping us understand not only where we are in the universe but also how everything came to be.
    </string>
    <string name="lesson1_title_2">Our Solar System</string>
    <string name="lesson1_text_2">
        Our home, Earth, is just one small part of a much larger cosmic neighborhood called the solar system.
        At its center is the Sun, a massive ball of hot gas that provides the energy needed for life on our planet.
        Surrounding it are eight planets—Mercury, Venus, Earth, Mars, Jupiter, Saturn, Uranus, and Neptune—each unique in size,
        composition, and atmosphere. Some planets, like Earth and Mars, have solid surfaces,
        while others, like Jupiter and Saturn, are made mostly of gas. Beyond the planets, there are moons, asteroids,
        comets, and dwarf planets like Pluto, all of which play an important role in our cosmic system. </string>
    <string name="lesson1_title_3">The Nearest Star: Proxima Centauri</string>
    <string name="lesson1_text_3">
        Our solar system is just a tiny part of the Milky Way Galaxy,
        which contains billions of stars. The closest star beyond our Sun is Proxima Centauri, part of the Alpha Centauri system
        , located 4.3 light-years away. Though this is the nearest star,
        traveling there with current technology would take thousands of years.
        Scientists are especially interested in Proxima Centauri because it has a planet, Proxima b, which might have conditions
        suitable for life. This makes it an important target for future space exploration,
        and its name has become a symbol of humanity’s curiosity about the universe.
    </string>
    <string name="lesson1_title_4">Why Astronomy is Important</string>
    <string name="lesson1_text_4">
        Astronomy is more than just stargazing—it impacts many areas of life:\n\

        Technology: Many innovations, like GPS and cameras in smartphones, were developed from astronomical research.\n\
        Climate Science: Studying planets like Venus helps us understand global warming.\n\
        Space Exploration: Helps us prepare for future space travel and asteroid defense.\n\
    </string>
    <string name="lesson2_title">The Universe – Large and Small Scales</string>
    <string name="lesson2_title_1">The Universe – Large and Small Scales</string>
    <string name="lesson2_text_1">Astronomy helps us understand not only Earth and our solar system but also the vastness of the universe itself.
        The universe is everything that exists—space, time, matter, and energy. It is so immense that even the fastest thing we know, light,
        takes billions of years to travel across it. The universe contains hundreds of billions of galaxies, each filled with billions of stars and planets.
        Our own galaxy, the Milky Way, is just one of these countless cosmic structures.
        But despite its enormous size, the universe is also made up of the tiniest things imaginable,
        such as atoms, subatomic particles, and even mysterious forces like dark matter and dark energy.
        Scientists believe that the universe began with the Big Bang about 13.8 billion years ago,
        a moment when everything we see today was once packed into an incredibly small, hot, and dense state before expanding outward.
        This expansion is still happening, meaning the universe is growing every second.
        Even though our planet may seem big to us, in the grand scale of the cosmos, Earth is just a tiny speck.
    </string>
    <string name="lesson2_title_2">Galaxies, Stars, and Planets</string>
    <string name="lesson2_text_2">
        Galaxies, stars, and planets exist on incredibly large scales that are hard to imagine. A single galaxy can stretch over hundreds of thousands of light-years and contain billions or even trillions of stars.
Our own galaxy, the Milky Way, is about 100,000 light-years wide, and that’s just one of billions of galaxies in the universe. Stars, the building blocks of galaxies, also vary greatly in size—some are
several times larger than our Sun, while others are much smaller. The Sun itself is so massive that about 1.3 million Earths could fit inside it. Planets, in comparison, are much smaller, but still impressive in size.
For example, Jupiter is the largest planet in our solar system and is more than 11 times wider than Earth. These enormous differences in scale—from planets to stars to galaxies—show just how vast and varied
the universe really is. </string>
    <string name="lesson2_title_3">The Smallest Structures in the Universe</string>
</resources>