<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.main_nav_frag.NasaNewsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/languageChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:singleLine="true"
            android:clipToPadding="false"
            app:singleSelection="true"
            app:chipSpacing="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_all_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/deep_space_black"
                app:chipStrokeWidth="1dp"
                app:checkedIconVisible="false"
                app:closeIconEnabled="false"/>


            <com.google.android.material.chip.Chip
                android:id="@+id/btn_today_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/deep_space_black"
                app:chipStrokeWidth="1dp"
                app:checkedIconVisible="false"
                app:closeIconEnabled="false"
                app:checkedIconTint="@color/rv_text_color"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/btn_saved_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saves"
                app:chipBackgroundColor="@color/white"
                app:chipStrokeColor="@color/deep_space_black"
                app:chipStrokeWidth="1dp"/>



            <!-- Add more chips as needed -->
        </com.google.android.material.chip.ChipGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_weight="2"
            android:id="@+id/rv_nasa_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <View
        android:id="@+id/darkOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BF000000" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        >

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:lottie_rawRes="@raw/loading_turquoise"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/loading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/rv_text_color"
            android:textSize="24sp" />
    </LinearLayout>


</FrameLayout>