<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.main_nav_frag.OtherMaterials">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Video Background -->
        <VideoView
            android:id="@+id/video_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@raw/video_bg_ai_generated"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            >

            <!--      solar planets    -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ic_solar_planets"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_some_planets" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/planets"
                    android:textAlignment="center"
                    android:textColor="@color/rv_text_color"
                    android:textSize="32dp" />
            </LinearLayout>

            <!--      Scientist-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ic_scientist"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_scientist" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scientists"
                    android:textAlignment="center"
                    android:textColor="@color/rv_text_color"
                    android:textSize="32dp" />
            </LinearLayout>


            <!--      About Centauri-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ic_about_centauri"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:background="@drawable/ic_logo_centauri" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_centauri"
                    android:textAlignment="center"
                    android:textColor="@color/rv_text_color"
                    android:textSize="32dp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>